fixed email text not readable

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ input{
 	color: black;
 	text-indent: 1vw;
 	font-size: 1vw;
+	text-shadow: none;
 }
 
 
